Comprehensive responsive styling

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ layout: default
   </section>
 
   <section class="section --home-video-1" id="home-video-1">
-    <div class="__body">
+    <div class="__body --with-video-button">
       <button class="play-video-button __video-button"></button>
       <div>
         <p class="p2">You create $data$ every day.</p>
@@ -104,8 +104,8 @@ layout: default
       <div class="col3">
         <div class="__card">
           <p class="p3 --yellow">WHO'S TRACKING YOUR NOW?</p>
-          <p class="p1 --yellow">Assume Everyone is tracking you.</p>
-          <p class="p1">
+          <p class="p1 --yellow --no-vmargin">Assume Everyone is tracking you.</p>
+          <p class="p1 --no-vmargin">
             Social media channels, search engines, websites, apps, games, personal
             assistants, sensors, smartphones, smart cars, smart TVs, and smart
             anything.
@@ -114,8 +114,8 @@ layout: default
 
         <div class="__card">
           <p class="p3 --yellow">HOW DO THEY TRACK YOU?</p>
-          <p class="p1 --yellow">Beyond Cookies</p>
-          <p class="p1">
+          <p class="p1 --yellow --no-vmargin">Beyond Cookies</p>
+          <p class="p1 --no-vmargin">
             Super-cookies, embedded scripts, fingerprinters, cross-device tracking,
             click-throughs, web beacons, favicons - and more, all silently stealing
             your data.
@@ -124,8 +124,8 @@ layout: default
 
         <div class="__card">
           <p class="p3 --yellow">WHAT CAN I CONTROL?</p>
-          <p class="p1 --yellow">You Own Your Data</p>
-          <p class="p1">
+          <p class="p1 --yellow --no-vmargin">You Own Your Data</p>
+          <p class="p1 --no-vmargin">
             With River, you decide which services can have access to your data, as
             well as what kind of access they can have. You can rent, sell, or lease
             the information to them or deny them altogether. The decision is yours.
@@ -144,16 +144,16 @@ layout: default
       <div class="col3">
         <div class="__card">
           <p class="p3 --yellow">WHAT CAN I DO WITH MY DATA?</p>
-          <p class="p1 --yellow">You Have Options</p>
-          <p class="p1">
+          <p class="p1 --yellow --no-vmargin">You Have Options</p>
+          <p class="p1 --no-vmargin">
             Store it, sanitize it, share it, secure it, or sell it, then confidently delete your account. Or not.
           </p>
         </div>
 
         <div class="__card">
           <p class="p1 --yellow">WAIT - I OWN MY DATA? <br /> WHAT DOES THAT MEAN?</p>
-          <p class="p1 --yellow">100% Yours</p>
-          <p class="p1">
+          <p class="p1 --yellow --no-vmargin">100% Yours</p>
+          <p class="p1 --no-vmargin">
             The GDPR in the EU and the CCPA in California are two examples of privacy legislation, and according to Gartner, 65% of the global population will enjoy protection of their personal data through some form of regulation.
           </p>
         </div>
@@ -166,7 +166,7 @@ layout: default
   </section>
 
   <section class="section --home-data-untapped" id="home-data-untapped">
-    <div class="__body">
+    <div class="__body --with-video-button">
       <button class="play-video-button __video-button"></button>
       <div>
         <p class="p2">Data Untapped.</p>
@@ -186,24 +186,24 @@ layout: default
       <p class="p2">How does River work?</p>
       <div class="col3">
         <div class="__card">
-          <p class="p3 --green">A firewall for your data</p>
-          <p class="p1">
+          <p class="p3 --green --no-vmargin">A firewall for your data</p>
+          <p class="p1 --no-vmargin">
             You choose what data you'd like to send to market, including how long it
             will be available for, which industries can access your data, and what
             it can be used for.
           </p>
         </div>
         <div class="__card">
-          <p class="p3 --yellow">Your digital agent</p>
-          <p class="p1">
+          <p class="p3 --yellow --no-vmargin">Your digital agent</p>
+          <p class="p1 --no-vmargin">
             We represent you in the online space, negotiating lucrative deals to
             maximize the value of your data, so you can get paid for your unique
             insights.
           </p>
         </div>
         <div class="__card">
-          <p class="p3 --orange">Future plans</p>
-          <p class="p1">
+          <p class="p3 --orange --no-vmargin">Future plans</p>
+          <p class="p1 --no-vmargin">
             Everyone creates data, but ont everyone wants to share it, so in the
             future, we'll offer a premium service that allows you to access the
             services you want without sharing your information.
@@ -216,11 +216,11 @@ layout: default
   </section>
 
   <section class="section --home-business-of-data" id="home-business-of-data">
-    <div class="__body">
+    <div class="__body --with-video-button">
       <button class="play-video-button __video-button"></button>
       <div>
         <p class="p2">The Business of Data</p>
-        <p class="p1">
+        <p class="p1 __p1">
           How does River profit from your data? Here's your fully transparent
           process, designed to protect you and your digital assets.
         </p>
