video player with YT integration

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ layout: default
 
   <section class="section --home-video-1" id="home-video-1">
     <div class="__body --with-video-button">
-      <button class="play-video-button __video-button"></button>
+      <button onclick="river.showVideo('video-1'); return false;" class="play-video-button __video-button"></button>
       <div>
         <p class="p2">You create $data$ every day.</p>
         <p class="p1">
@@ -167,7 +167,7 @@ layout: default
 
   <section class="section --home-data-untapped" id="home-data-untapped">
     <div class="__body --with-video-button">
-      <button class="play-video-button __video-button"></button>
+      <button onclick="river.showVideo('video-2'); return false;" class="play-video-button __video-button"></button>
       <div>
         <p class="p2">Data Untapped.</p>
         <p class="p1">
@@ -217,7 +217,7 @@ layout: default
 
   <section class="section --home-business-of-data" id="home-business-of-data">
     <div class="__body --with-video-button">
-      <button class="play-video-button __video-button"></button>
+      <button onclick="river.showVideo('video-3'); return false;" class="play-video-button __video-button"></button>
       <div>
         <p class="p2">The Business of Data</p>
         <p class="p1 __p1">
