svgs with color transitions.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: default
   <section class="section --home-video-1" id="home-video-1">
     <div class="__body --with-video-button">
       <button onclick="river.showVideo('video-1'); return false;" class="play-video-button __video-button">
-        {% include play_button.html %}
+        {% include play_button.svg %}
       </button>
       <div>
         <p class="p2">You create $data$ every day.</p>
@@ -170,7 +170,7 @@ layout: default
   <section class="section --home-data-untapped" id="home-data-untapped">
     <div class="__body --with-video-button">
       <button onclick="river.showVideo('video-2'); return false;" class="play-video-button __video-button">
-        {% include play_button.html %}
+        {% include play_button.svg %}
       </button>
       <div>
         <p class="p2">Data Untapped.</p>
@@ -222,7 +222,7 @@ layout: default
   <section class="section --home-business-of-data" id="home-business-of-data">
     <div class="__body --with-video-button">
       <button onclick="river.showVideo('video-3'); return false;" class="play-video-button __video-button">
-        {% include play_button.html %}
+        {% include play_button.svg %}
       </button>
       <div>
         <p class="p2">The Business of Data</p>
