Re-jigger video load strategy, update overalys.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
     {% include breadcrumb.html teaser="Every Story <br /> Starts with Data." %}
   </section>
 
-  <section class="section --home-privacy-platform" id="home-privacy-platform">
+  <section class="section --home-privacy-platform" id="home-privacy-platform" data-video-name="smooth">
     <div class="__body">
       <p class="p2">A Privacy Platform You'll Want to Use.</p>
       <p class="p1">
@@ -34,7 +34,7 @@ layout: default
     {% include breadcrumb.html teaser="Data is <br /> Valuable." %}
   </section>
 
-  <section class="section --home-video-1" id="home-video-1">
+  <section class="section --home-video-1" id="home-video-1" data-video-name="choppy">
     <div class="__body --with-video-button">
       <button onclick="river.showVideo('video-1'); return false;" class="play-video-button __video-button">
         {% include play_button.svg %}
@@ -51,7 +51,7 @@ layout: default
     {% include breadcrumb.html teaser="Make Data <br /> Work for You." %}
   </section>
 
-  <section class="section --home-river-gives-you-control" id="home-river-gives-you-control">
+  <section class="section --home-river-gives-you-control" id="home-river-gives-you-control" data-video-name="flowing">
     <div class="__body">
       <p class="p2">River gives you control over your data.</p>
       <div class="col2">
@@ -76,7 +76,7 @@ layout: default
     {% include breadcrumb.html teaser="Dive into <br /> Your Data." %}
   </section>
 
-  <section class="section --home-who-owns-your-data" id="home-who-owns-your-data">
+  <section class="section --home-who-owns-your-data" id="home-who-owns-your-data" data-video-name="smooth">
     <div class="__body">
       <p class="p2">Who Owns Your Data?</p>
       <div class="col2">
@@ -99,7 +99,7 @@ layout: default
     {% include breadcrumb.html teaser="The Confluence <br /> of Data." %}
   </section>
 
-  <section class="section --home-who-is-using-your-data" id="home-who-is-using-your-data">
+  <section class="section --home-who-is-using-your-data" id="home-who-is-using-your-data" data-video-name="creek">
     <div class="__body">
       <p class="p2">Who is using your data?</p>
 
@@ -139,7 +139,7 @@ layout: default
     {% include breadcrumb.html teaser="Dive <br /> into River." %}
   </section>
 
-  <section class="section --home-who-is-using-your-data-2" id="home-who-is-using-your-data-2">
+  <section class="section --home-who-is-using-your-data-2" id="home-who-is-using-your-data-2" data-video-name="creek">
     <div class="__body">
       <p class="p2">Who is using your data?</p>
 
@@ -185,7 +185,7 @@ layout: default
     {% include breadcrumb.html teaser="Dive <br /> into River." %}
   </section>
 
-  <section class="section --home-how-does-river-work" id="home-how-does-river-work">
+  <section class="section --home-how-does-river-work" id="home-how-does-river-work" data-video-id="rough">
     <div class="__body">
       <p class="p2">How does River work?</p>
       <div class="col3">
@@ -219,7 +219,7 @@ layout: default
     {% include breadcrumb.html teaser="Data <br /> for Profit." %}
   </section>
 
-  <section class="section --home-business-of-data" id="home-business-of-data">
+  <section class="section --home-business-of-data" id="home-business-of-data" data-video-id="rough">
     <div class="__body --with-video-button">
       <button onclick="river.showVideo('video-3'); return false;" class="play-video-button __video-button">
         {% include play_button.svg %}
