--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ layout: default
     {% include breadcrumb.html teaser="Dive <br /> into River." %}
   </section>
 
-  <section class="section --home-how-does-river-work" id="home-how-does-river-work" data-video-id="rough">
+  <section class="section --home-how-does-river-work" id="home-how-does-river-work" data-video-name="rough">
     <div class="__body">
       <p class="p2">How does River work?</p>
       <div class="col3">
@@ -219,7 +219,7 @@ layout: default
     {% include breadcrumb.html teaser="Data <br /> for Profit." %}
   </section>
 
-  <section class="section --home-business-of-data" id="home-business-of-data" data-video-id="rough">
+  <section class="section --home-business-of-data" id="home-business-of-data" data-video-name="rough">
     <div class="__body --with-video-button">
       <button onclick="river.showVideo('video-3'); return false;" class="play-video-button __video-button">
         {% include play_button.svg %}
