Use trimmed video ids

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
     {% include breadcrumb.html teaser="Data is <br /> Valuable." %}
   </section>
 
-  <section class="section --home-video-1" id="home-video-1" data-video-name="choppy">
+  <section class="section --home-video-1" id="home-video-1" data-video-name="rough">
     <div class="__body --with-video-button">
       <button onclick="river.showVideo('video-1'); return false;" class="play-video-button __video-button">
         {% include play_button.svg %}
