Some gradient tweaks

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ layout: default
     {% include breadcrumb.html teaser="Dive into <br /> Your Data." %}
   </section>
 
-  <section class="section --home-who-owns-your-data" id="home-who-owns-your-data" data-video-name="smooth">
+  <section class="section --home-who-owns-your-data" id="home-who-owns-your-data" data-video-name="flowing">
     <div class="__body">
       <p class="p2">Who Owns Your Data?</p>
       <div class="col2">
