--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@ layout: default
 <div class="scroll-container">
   <section class="section --home-intro" id="home-intro">
     <div class="__body">
-      <p class="p1">In the online world, there are essentially two groups:</h4>
-      <p class="p2">
+      <p id="home-intro-p1-string" class="p1 --typed-string">In the online world, there are essentially two groups:</p>
+      <div class="p1">
+        <span id="home-intro-p1"></span>
+      </div>
+      <p class="p2 __hidden-copy --hidden">
         Those who create data <br />
         and those who sell it. <br />
         River brings value to both.
