WIP, kitchen sink, added line drawing + updated slide events

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ layout: default
       <div class="p1">
         <span id="home-intro-p1"></span>
       </div>
-      <p class="p2 __hidden-copy --hidden">
-        Those who create data <br />
-        and those who sell it. <br />
-        River brings value to both.
-      </p>
+      <div>
+        <p class="p2 hidden-copy --hidden">Those who generate data.</p>
+        <p class="p2 hidden-copy --hidden --delay-1">Those who profit from it.</p>
+        <p class="p2 hidden-copy --hidden --delay-2">River brings value to both.</p>
+      </div>
     </div>
 
     {% include breadcrumb.html teaser="Every Story <br /> Starts with Data." %}
