WIP adding first slide transitions.

--- a/index.html
+++ b/index.html
@@ -16,21 +16,23 @@ layout: default
         <p class="p2 hidden-copy --hidden --delay-2">River brings value to both.</p>
       </div>
     </div>
-
-    {% include breadcrumb.html teaser="Every Story <br /> Starts with Data." %}
   </section>
 
   <section class="section --home-privacy-platform" id="home-privacy-platform" data-video-name="smooth">
     <div class="__body">
-      <p class="p2">A Privacy Platform You'll Want to Use.</p>
-      <p class="p1">
-        River is a data management platform that helps you regain control over
-        your data and gives app developers, advertisers, and organizations a
-        reliable route to compliance for the data they're acquiring about you.
-        You choose how, where, and who has access to your data.
+      <p id="home-privacy-platform-p2-string" class="p2 --typed-string">River is a platform for your data, where you have control, insight and where you make money.</p>
+      <p class="p2"><span id="home-privacy-platform-p2"></span></p>
+      <p class="p1 hidden-copy --hidden">
+        River gives you:
+        <br />
+        <span class="p3">Privacy</span> &mdash; control who, what, when, and where your data can be used.
+        <br />
+        <span class="p3">Perspective</span> &mdash; learn more about yourself from the data you generate.
+        <br />
+        <span class="p3">Profit</span> &mdash; sell only the slices of your data that you want to sell.
       </p>
       <div class="button-container">
-        <p class="button --red-stroke --center">Sign up to become a privacy pioneer</p>
+        <p class="button --red-stroke --center hidden-copy --hidden --delay-3">Sign up to become a privacy pioneer</p>
       </div>
     </div>
 
