--- a/index.html
+++ b/index.html
@@ -31,9 +31,6 @@ layout: default
         <br />
         <span class="p3">Profit</span> &mdash; sell only the slices of your data that you want to sell.
       </p>
-      <div class="button-container">
-        <p class="button --red-stroke --center hidden-copy --hidden --delay-3">Sign up to become a privacy pioneer</p>
-      </div>
     </div>
 
     {% include breadcrumb.html teaser="Data is <br /> Valuable." %}
@@ -56,52 +53,81 @@ layout: default
     {% include breadcrumb.html teaser="Make Data <br /> Work for You." %}
   </section>
 
+  <section class="section --your-data-belongs-to-you" id="your-data-belongs-to-you" data-video-name="flowing">
+    <div class="__body">
+      <p class="p2">Your Data Belongs to You.</p>
+      <p class="p1">
+        Big tech, traditional advertisers, and app developers – everyone is changing how they collect data to reflect new laws around the world:
+      </p>
+      <p class="p3 --underline --caps">You Own Your Data</p>
+      <p class="p3">River helps you manage and make money from your data.</p>
+      <ul class="p1 --no-vmargin">
+        <li>River gives you full control over how social media, advertisers, and the technology you use for work and play every day can access and use your data. And we help you get paid for it.</li>
+        <li>River also helps enterprises and organizations comply with global laws designed to protect your privacy. River provides businesses the valuable compliance tools they require.</li>
+        <li>Our model is simple: you choose the data you want to share; we provide a marketplace for you to sell it.</li>
+      </ul>
+    </div>
+
+    {% include breadcrumb.html teaser="Dive into <br /> Your Data." %}
+  </section>
+
+
   <section class="section --home-river-gives-you-control" id="home-river-gives-you-control" data-video-name="flowing">
     <div class="__body">
-      <p class="p2">River gives you control over your data.</p>
+      <p class="p2">If the service is free, you are the product</p>
       <div class="col2">
         <p class="p1">
-          Websites and businesses collect oceans of data about you and your
-          family, all day, every day. Information like how you slept last night,
-          how many pounds you gained over the holidays, where you like to shop,
-          which games you like to play, what shows you like to watch, how many
-          times you ordered pineapple on your pizza, and so much more. Every
-          single action in your day can be boiled down to a data point, and this
-          information is used by big corporations to nudge you towards buying
-          things you don't want and don't need. Companies pay big money for your
-          data, but they're getting far more than they need. River helps you get
-          paid for the info you're willing to sell while protecting the data you'd
-          like to keep private.
+          Websites and businesses collect volumes of data about you and your family, all day, every day. Information like how you slept last night,
+          how many pounds you gained over the holidays, where you like to shop, which games you like to play,
+          what shows you like to watch, how many times you ordered pineapple on your pizza, and so much more.
+          Every single action in your day can be boiled down to a data point, and this information is used by corporations
+          and organizations to influence your decisions, like buying a product or casting a vote.
         </p>
-        <p class="p4 --yellow">If it's free, you're probably the product.</p>
-        <p class="button --yellow-fill">STOP GIVING AWAY YOUR DATA VOLUNTARILY SIGN UP FOR RIVER TODAY</p>
+        <p class="p1">
+          Companies are investing heavily in your data, but they are getting more than they need. River helps you get paid for the information you are willing to sell while protecting the data you need to keep private. 
+        </p>
+        <p class="button --yellow-fill --caps">Stop giving away your data – sign up for river</p>
       </div>
     </div>
 
     {% include breadcrumb.html teaser="Dive into <br /> Your Data." %}
   </section>
 
-  <section class="section --home-who-owns-your-data" id="home-who-owns-your-data" data-video-name="flowing">
+    <section class="section --home-privacy-platform-2" id="home-privacy-platform-2" data-video-name="flowing">
     <div class="__body">
-      <p class="p2">Who Owns Your Data?</p>
-      <div class="col2">
-        <p class="p1">
-          Through legislation in the US and around the world, it's been made
-          crystal clear to marketers and app-developers that you own your own
-          data. The problem is, you can't really do anything with it. Yet. <br />
-          River gives you full control over which services have access to your data, and
-          for how long they can have it. And we can help enterprises and
-          organizations quickly and easily comply with US and global laws designed
-          to protect your privacy. Our business model works by giving you control
-          over your data and by providing a platform that makes compliance
-          accessible for developers and marketers.
-        </p>
+      <p class="p2">A privacy platform you'll want to use.</p>
+      <p class="p3">Imagine:</p>
+      <div class="flex-col2">
+        <ul class="p1">
+          <li>
+            <p class="p1 --no-vmargin">A social environment that lets you express your data in a visually spectacular way.</p>
+            <p class="p4 --no-vmargin">Your data can be beautiful – and encrypted.</p> 
+          </li>
 
-        <p class="p4 --yellow">It's your data. River helps you manage it.</p>
+          <li>
+            <p class="p1 --no-vmargin">An accessible platform that lets you share your data securely, easily, and directly.</p>
+            <p class="p4 --no-vmargin">Your data can be controlled – by you.</p> 
+          </li>
+
+          <li>
+            <p class="p1 --no-vmargin">A marketplace where you can get paid for sharing the data you create.</p>
+            <p class="p4 --no-vmargin">Your data can be valuable – and fun.</p> 
+          </li>
+        </ul>
+        <div>
+          <p class="p1">
+            <span class="p3">Streams</span> is an end-to-end, encrypted communication platform, providing a secure space to share your data with the people and businesses you want to connect with.
+          </p>
+
+          <p class="p1">
+            <span class="p3">RiverBank</span> gives you the liquidity and security of a bank account while connecting you to a marketplace of business and organizations willing to pay for the data you create.
+          </p>
+          <p class="button --orange-fill --caps">Sign up to be a privacy pioneer</p>
+        </div>
       </div>
     </div>
 
-    {% include breadcrumb.html teaser="The Confluence <br /> of Data." %}
+    {% include breadcrumb.html teaser="Dive into <br /> Your Data." %}
   </section>
 
   <section class="section --home-who-is-using-your-data" id="home-who-is-using-your-data" data-video-name="creek">
@@ -110,8 +136,8 @@ layout: default
 
       <div class="col3">
         <div class="__card">
-          <p class="p3 --yellow">WHO'S TRACKING YOUR NOW?</p>
-          <p class="p1 --yellow --no-vmargin">Assume Everyone is tracking you.</p>
+          <p class="p3">Who's tracking you now?</p>
+          <p class="p4 --no-vmargin">Assume Everyone is tracking you.</p>
           <p class="p1 --no-vmargin">
             Social media channels, search engines, websites, apps, games, personal
             assistants, sensors, smartphones, smart cars, smart TVs, and smart
@@ -120,8 +146,8 @@ layout: default
         </div>
 
         <div class="__card">
-          <p class="p3 --yellow">HOW DO THEY TRACK YOU?</p>
-          <p class="p1 --yellow --no-vmargin">Beyond Cookies</p>
+          <p class="p3">How do they track you?</p>
+          <p class="p4 --no-vmargin">Beyond Cookies</p>
           <p class="p1 --no-vmargin">
             Super-cookies, embedded scripts, fingerprinters, cross-device tracking,
             click-throughs, web beacons, favicons - and more, all silently stealing
@@ -130,8 +156,8 @@ layout: default
         </div>
 
         <div class="__card">
-          <p class="p3 --yellow">WHAT CAN I CONTROL?</p>
-          <p class="p1 --yellow --no-vmargin">You Own Your Data</p>
+          <p class="p3">What can I control?</p>
+          <p class="p4 --no-vmargin">You Own Your Data</p>
           <p class="p1 --no-vmargin">
             With River, you decide which services can have access to your data, as
             well as what kind of access they can have. You can rent, sell, or lease
@@ -150,16 +176,16 @@ layout: default
 
       <div class="col3">
         <div class="__card">
-          <p class="p3 --yellow">WHAT CAN I DO WITH MY DATA?</p>
-          <p class="p1 --yellow --no-vmargin">You Have Options</p>
+          <p class="p3">What can I do with my data?</p>
+          <p class="p4 --no-vmargin">You Have Options</p>
           <p class="p1 --no-vmargin">
             Store it, sanitize it, share it, secure it, or sell it, then confidently delete your account. Or not.
           </p>
         </div>
 
         <div class="__card">
-          <p class="p1 --yellow">WAIT - I OWN MY DATA? <br /> WHAT DOES THAT MEAN?</p>
-          <p class="p1 --yellow --no-vmargin">100% Yours</p>
+          <p class="p1">Wait – I own my data? What does that mean?</p>
+          <p class="p4 --no-vmargin">100% Yours</p>
           <p class="p1 --no-vmargin">
             The GDPR in the EU and the CCPA in California are two examples of privacy legislation, and according to Gartner, 65% of the global population will enjoy protection of their personal data through some form of regulation.
           </p>
@@ -167,6 +193,23 @@ layout: default
 
         <div class="__card">&nbsp;</div>
       </div>
+    </div>
+
+    {% include breadcrumb.html teaser="Dive <br /> into River." %}
+  </section>
+
+  <section class="section --home-working-with-big-tech" id="home-working-with-big-tech" data-video-name="creek">
+    <div class="__body">
+      <p class="p2">Working with Deep Tech, not against them?</p>
+
+      <ul class="p1">
+        <li class="p1">River uses a capabilities (CAPS) based structure rather than an identities-based sharing model for your data. CAPS allows for fine-grain permissioning, which gives you more control over who can access your data through the use of pointers</li>
+        <li class="p1">River makes it easier for technology teams to be compliant with current and future privacy laws. Through our data management platform,
+          app developers and advertisers can integrate our service with their products, giving their users an easy and effective solution to control their data.
+          Using the principle of least authority (POLA), app developers can acquire and use the data objects they need without touching the rest of the data being generated.
+        </li>
+        <li class="p1">Fine-grain permissioning keeps your data secure, while POLA enables you to choose who can see the slice of data you want to share with them.</li>
+      </ul>
     </div>
 
     {% include breadcrumb.html teaser="Dive <br /> into River." %}
@@ -192,27 +235,26 @@ layout: default
 
   <section class="section --home-how-does-river-work" id="home-how-does-river-work" data-video-name="rough">
     <div class="__body">
-      <p class="p2">How does River work?</p>
+      <p class="p2">The Business of River.</p>
       <div class="col3">
         <div class="__card">
-          <p class="p3 --green --no-vmargin">A firewall for your data</p>
-          <p class="p1 --no-vmargin">
+          <p class="p3">A firewall for your data</p>
+          <p class="p1">
             You choose what data you'd like to send to market, including how long it
             will be available for, which industries can access your data, and what
             it can be used for.
           </p>
         </div>
         <div class="__card">
-          <p class="p3 --yellow --no-vmargin">Your digital agent</p>
-          <p class="p1 --no-vmargin">
-            We represent you in the online space, negotiating lucrative deals to
-            maximize the value of your data, so you can get paid for your unique
-            insights.
+          <p class="p3">A digital marketplace</p>
+          <p class="p1">
+            RiverBank is your digital marketplace, where you can sell your data, 
+            track your earnings, and access the money you've made off your data.
           </p>
         </div>
         <div class="__card">
-          <p class="p3 --orange --no-vmargin">Future plans</p>
-          <p class="p1 --no-vmargin">
+          <p class="p3">Future plans</p>
+          <p class="p1">
             Everyone creates data, but ont everyone wants to share it, so in the
             future, we'll offer a premium service that allows you to access the
             services you want without sharing your information.
