--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ layout: default
       <p class="p2">A privacy platform you'll want to use.</p>
       <p class="p3">Imagine:</p>
       <div class="flex-col2">
-        <ul class="p1">
+        <ul class="p1 --no-vmargin">
           <li>
             <p class="p1 --no-vmargin">A social environment that lets you express your data in a visually spectacular way.</p>
             <p class="p4 --no-vmargin">Your data can be beautiful – and encrypted.</p> 
@@ -184,7 +184,7 @@ layout: default
         </div>
 
         <div class="__card">
-          <p class="p1">Wait – I own my data? What does that mean?</p>
+          <p class="p3">Wait – I own my data? What does that mean?</p>
           <p class="p4 --no-vmargin">100% Yours</p>
           <p class="p1 --no-vmargin">
             The GDPR in the EU and the CCPA in California are two examples of privacy legislation, and according to Gartner, 65% of the global population will enjoy protection of their personal data through some form of regulation.
