Add Riverbank and StreamS

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 # index.html
 title: River
 layout: default
+videos: { smooth: true, rough: true, flowing: true, creek: true }
 ---
 <div class="scroll-container">
   <section class="section --home-intro" id="home-intro">
@@ -33,7 +34,7 @@ layout: default
       </p>
     </div>
 
-    {% include breadcrumb.html teaser="Data is <br /> Valuable." %}
+    {% include breadcrumb.html teaser="Are You <br /> Creating Data?" %}
   </section>
 
   <section class="section --home-video-1" id="home-video-1" data-video-name="rough">
@@ -50,7 +51,7 @@ layout: default
       </div>
     </div>
 
-    {% include breadcrumb.html teaser="Make Data <br /> Work for You." %}
+    {% include breadcrumb.html teaser="Make Data <br /> Work <br /> for You." %}
   </section>
 
   <section class="section --your-data-belongs-to-you" id="your-data-belongs-to-you" data-video-name="flowing">
@@ -68,7 +69,7 @@ layout: default
       </ul>
     </div>
 
-    {% include breadcrumb.html teaser="Dive into <br /> Your Data." %}
+    {% include breadcrumb.html teaser="Dive into <br /> Your Data" %}
   </section>
 
 
@@ -90,7 +91,7 @@ layout: default
       </div>
     </div>
 
-    {% include breadcrumb.html teaser="Dive into <br /> Your Data." %}
+    {% include breadcrumb.html teaser="Get Paid for <br /> Your Data" %}
   </section>
 
     <section class="section --home-privacy-platform-2" id="home-privacy-platform-2" data-video-name="flowing">
@@ -116,7 +117,7 @@ layout: default
         </ul>
         <div>
           <p class="p1">
-            <span class="p3">Streams</span> is an end-to-end, encrypted communication platform, providing a secure space to share your data with the people and businesses you want to connect with.
+            <span class="p3 --no-vmargin">Streams</span> is an end-to-end, encrypted communication platform, providing a secure space to share your data with the people and businesses you want to connect with.
           </p>
 
           <p class="p1">
@@ -127,7 +128,7 @@ layout: default
       </div>
     </div>
 
-    {% include breadcrumb.html teaser="Dive into <br /> Your Data." %}
+    {% include breadcrumb.html teaser="Rent, Sell, <br /> or Lease <br /> Your Data" %}
   </section>
 
   <section class="section --home-who-is-using-your-data" id="home-who-is-using-your-data" data-video-name="creek">
@@ -167,7 +168,7 @@ layout: default
       </div>
     </div>
 
-    {% include breadcrumb.html teaser="Dive <br /> into River." %}
+    {% include breadcrumb.html teaser="Control <br /> Your Data" %}
   </section>
 
   <section class="section --home-who-is-using-your-data-2" id="home-who-is-using-your-data-2" data-video-name="creek">
@@ -195,12 +196,12 @@ layout: default
       </div>
     </div>
 
-    {% include breadcrumb.html teaser="Dive <br /> into River." %}
+    {% include breadcrumb.html teaser="River Enables <br /> Compliance" %}
   </section>
 
   <section class="section --home-working-with-big-tech" id="home-working-with-big-tech" data-video-name="creek">
     <div class="__body">
-      <p class="p2">Working with Deep Tech, not against them?</p>
+      <p class="p2">Working with Deep Tech, not against them.</p>
 
       <ul class="p1">
         <li class="p1">River uses a capabilities (CAPS) based structure rather than an identities-based sharing model for your data. CAPS allows for fine-grain permissioning, which gives you more control over who can access your data through the use of pointers</li>
@@ -263,7 +264,7 @@ layout: default
       </div>
     </div>
 
-    {% include breadcrumb.html teaser="Data <br /> for Profit." %}
+    {% include breadcrumb.html teaser="The <br /> River MVP" %}
   </section>
 
   <section class="section --home-business-of-data" id="home-business-of-data" data-video-name="rough">
@@ -280,7 +281,7 @@ layout: default
       </div>
     </div>
 
-    {% include breadcrumb.html teaser="Resources" %}
+    {% include breadcrumb.html teaser="Socialize Your Data" %}
   </section>
 
   <section class="section --home-resources" id="home-resources">
