--- a/riverbank.html
+++ b/riverbank.html
@@ -36,7 +36,7 @@ videos: { smooth: true }
 
       <div class="__images">
         <img
-          src="{{ site.baseUrl }}/assets/img/riverbank-1.jpg"
+          src="{{ site.baseurl }}/assets/img/riverbank-1.jpg"
           alt="Riverbank"
         />
       </div>
