--- a/streams.html
+++ b/streams.html
@@ -50,7 +50,7 @@ videos: { flowing: true }
 
       <div class="__images">
         <img
-          src="{{ site.baseUrl }}/assets/img/streams-1.jpg"
+          src="{{ site.baseurl }}/assets/img/streams-1.jpg"
           alt="Riverbank"
         />
       </div>
