--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ videos: { smooth: true, rough: true, flowing: true, creek: true }
       </div>
       <div>
         <p class="p2 hidden-copy --hidden">Those who generate data.</p>
+        <p class="p2 hidden-copy --hidden --delay-0-5 --center">and</p>
         <p class="p2 hidden-copy --hidden --delay-1">Those who profit from it.</p>
         <p class="p2 hidden-copy --hidden --delay-2">River brings value to both.</p>
       </div>
