Riverbank + StreamS looking good

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 title: River
 layout: default
 videos: { smooth: true, rough: true, flowing: true, creek: true }
+animatedBackgroundColor: true
 ---
 <div class="scroll-container">
   <section class="section --home-intro" id="home-intro">
