Fixed typing on page 2

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@ animatedBackgroundColor: true
   <section class="section --home-privacy-platform" id="home-privacy-platform" data-video-name="smooth">
     <div class="__body">
       <p id="home-privacy-platform-p2-string" class="p2 --typed-string">River is a platform for your data, where you have control, insight and where you make money.</p>
-      <p class="p2"><span id="home-privacy-platform-p2"></span></p>
+      <div class="__typing-text-target">
+        <p class="p2" id="home-privacy-platform-p2"></p>
+        <p>&nbsp;</p>
+      </div>
       <p class="p1 hidden-copy --hidden">
         River gives you:
         <br />
