Fix videos and swap "smooth" out for "flowing"

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 # index.html
 title: River
 layout: default
-videos: { smooth: true, rough: true, flowing: true, creek: true }
+videos: { rough: true, flowing: true, creek: true }
 animatedBackgroundColor: true
 ---
 <div class="scroll-container">
@@ -21,7 +21,7 @@ animatedBackgroundColor: true
     </div>
   </section>
 
-  <section class="section --home-privacy-platform" id="home-privacy-platform" data-video-name="smooth">
+  <section class="section --home-privacy-platform" id="home-privacy-platform" data-video-name="flowing">
     <div class="__body">
       <p id="home-privacy-platform-p2-string" class="p2 --typed-string">River is a platform for your data, where you have control, insight and where you make money.</p>
       <div class="__typing-text-target">
